--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="font-family">
     <header class="bg_1">
-        <nav class="navbar flex-box">
+        <nav class="navbar max-width flex-box">
             <h3 class="brand dark-1">G3 Architects</h3>
             <ul class="nav-list flex-box">
                 <li class="list-item"><a class="dark-2" href="">Home</a></li>
@@ -20,7 +20,7 @@
             </ul>
         </nav>
 
-        <section class="banner">
+        <section class="banner max-width">
             <div class="banner-content">
                 <h1 class="banner-heading">Brand NewGroup of Architects</h1>
                 <p class="banner-description dark-3">
@@ -32,6 +32,61 @@
             <img class="banner-image" src="images/banner.png" alt="">
         </section>
     </header>
+
+    <main>
+        <section class="teams flex-box max-width">
+            <div class="teams_img_box">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+
+            <div class="our-features">
+                <h3 class="section_heading"><span id="quick-list" class="dark-3">Quick list</span> of Our <span id="features">Features</span></h3>
+                <div class="section_description dark-3">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </div>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+
+        <!-- features will enjoy -->
+         <section>
+
+         </section>
+
+         <!-- some facts -->
+
+         <section>
+            <h3 class="section_heading">Some Facts</h3>
+            <p class="dark-3">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+            </p>
+            <div class="facts-container">
+                <div class="facts">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="facts">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="facts">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="facts">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+            </div>
+         </section>
+    </main>
 </body>
 
 </html>
