the page is created completely and designed to be responsive

--- a/index.html
+++ b/index.html
@@ -43,50 +43,126 @@
             </div>
 
             <div class="our-features">
-                <h3 class="section_heading"><span id="quick-list" class="dark-3">Quick list</span> of Our <span id="features">Features</span></h3>
+                <h3 class="section_heading"><span id="quick-list" class="dark-3">Quick list</span> of Our <span id="span_2">Features</span></h3>
                 <div class="section_description dark-3">
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even
                 </div>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
 
         <!-- features will enjoy -->
-         <section>
+        <section class="features flex-box ">
+            <div>
+                <h3 class="section_heading" id="f_heading">Features you will love & enjoy</h3>
+                <p class="dark-3">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
 
-         </section>
-
-         <!-- some facts -->
-
-         <section>
-            <h3 class="section_heading">Some Facts</h3>
-            <p class="dark-3">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
-            </p>
-            <div class="facts-container">
-                <div class="facts">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <!-- feature card container  -->
+                <div class="f_card">
+                    <h3 class="feature_title">Dexktop & Mobile Version</h3>
+                    <p class="dark-3">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
                 </div>
-                <div class="facts">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="f_card">
+                    <h3 class="feature_title">Drag & Drop Builder</h3>
+                    <p class="dark-3">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
                 </div>
-                <div class="facts">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="f_card">
+                    <h3 class="feature_title">Awesome Modern Design</h3>
+                    <p class="dark-3">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
                 </div>
-                <div class="facts">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="f_card">
+                    <h3 class="feature_title">Super Easy to Edit</h3>
+                    <p class="dark-3">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
                 </div>
             </div>
-         </section>
+            <div class="architector-img">
+                <img src="images/architect.png" alt="">
+                <button class="btn-primary" id="experience-badge">
+                    <span id="experience-years">10+Year</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+        </section>
+
+        <!-- some facts -->
+
+        <section id="f_m-w">
+            <div class="fact-heading">
+                <h3 class="section_heading">Some Facts</h3>
+                <p class="dark-3 facts_description">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration.
+                </p>
+            </div>
+            <div class="facts-container">
+                <div class="facts flex-box">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name dark-3">Award Wining</h5>
+                    </div>
+                </div>
+                <div class="facts flex-box">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name dark-3">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="facts flex-box">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name dark-3">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="facts flex-box">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name dark-3">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- sponsor companies -->
+
+        <section class="our-sponsors max-width">
+            <div class="companies-heading-div">
+                <h3 class="section-heading">Our Sponsors</h3>
+                <p class="dark-2">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration.
+                </p>
+            </div>
+
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <p class="dark-2">All rights reserved copyright@2025 startup landing page design</p>
+    </footer>
 </body>
 
 </html>
